2005-04-01  Lluis Sanchez Gual <lluis@novell.com>

	* ButtonField.cs: Mostly implemented.
	* DataControlFieldHeaderCell.cs: Implemented.
	* ObjectDataSourceView.cs: Initial implementation.
	* DataControlButton.cs: Added support for real buttons.
	* Label.cs, DataControlField.cs: Flush.
	* ObjectDataSource.cs: Initial implementation.
	* HiddenField.cs: Added class stub.
	* GridView.cs: Load autogenerated field properties before
	creating the children, to make sure that column info is ready.
	* ControlParameter.cs: Implemented Evaluate method.
	* ImageField.cs: Added class stub.
	* BoundField.cs: Added HtmlEncode property.
	* DataControlFieldCell.cs: Moved AccessibleDataControlFieldCell
	to its own file.
	* CheckBoxField.cs: Mostly implemented.
	* TemplateField.cs: Added class stub.
	* ObjectDataSourceSelectingEventArgs.cs: Added missing property.
	* ObjectDataSourceMethodEventArgs.cs: Fixed base class.
	* Parameter.cs: Added internal GetValue method (Evaluate is protected)

2005-03-23  Lluis Sanchez Gual <lluis@novell.com>

	* DataControlField.cs: Added missing InsertVisible property.
	* AutoGeneratedFieldProperties.cs: Implemented.
	* PagerSettings.cs: Minor fix.
	* GridView.cs: Implemented support for autogenerated fields, templates,
	accessible headers. Implemented paging using PagedDataSource.
	Implemented missing overridable methods.
	* AutoGeneratedField.cs: Initial implementation.
	* BoundField.cs: Added ReadOnly property.
	* PagedDataSource.cs: Implemented 2.0 api.
	* DataControlFieldCell.cs: Implemented AccessibleDataControlFieldCell
	cell class to be used by accessible headers.
	* TableCell.cs: Removed unneded constructor. If the cell is bound to
	a template, call the default RenderContents method.

2005-03-16  Lluis Sanchez Gual  <lluis@novell.com>

	* TreeNode.cs, TreeView.cs: Don't raise the SelectedNodeChanged
	  event when loading the view state. Fixes #73746.

2005-03-16  Lluis Sanchez Gual <lluis@novell.com>
