@@ -285,7 +285,8 @@ namespace System.Web.UI.WebControls
 		{
 			if(IsEmpty)
 				return String.Empty;
-			return ( val.ToString(culture.NumberFormat) + GetStringFromPixel(type) );
+
+			return (val.ToString(culture) + GetStringFromPixel(type));
 		}
 	}
 }
